# oil-perps

./: .gitignore  Anchor.toml  Cargo.toml  TODO.md
backend/api/: Cargo.toml
backend/api/src/: demo_bot.rs  main.rs  oracle.rs  routes.rs  state.rs  ws.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: db.rs  main.rs  parser.rs
backend/keeper/: Cargo.toml
backend/keeper/src/: funding.rs  liquidator.rs  main.rs
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: AccountPanel.tsx  AdminPanel.tsx  AdvancedOrderEntry.tsx  CollateralPanel.tsx  CommoditySelector.tsx  LpVault.tsx  MarketMakerPanel.tsx  MarketStats.test.tsx  MarketStats.tsx  MmQuoteManager.tsx  MmQuotesTable.tsx  OrderBook.test.tsx  OrderBook.tsx  OrderEntry.test.tsx  OrderEntry.tsx  OrdersTable.tsx  PortfolioAnalytics.tsx  PositionTable.test.tsx  PositionTable.tsx  PriceAlerts.tsx  RecentTrades.test.tsx  RecentTrades.tsx  ReferralPanel.tsx  TpSlManager.tsx  TradeHistory.tsx  TradingChart.test.tsx  TradingChart.tsx
frontend/src/config/: commodities.ts  program.ts
frontend/src/hooks/: useMarket.test.ts  useMarket.ts  useMarketMaker.ts  useOnChainMarket.ts  useOnChainPositions.ts  useOnChainReferral.ts  usePerpsProgram.ts  usePositions.test.ts  usePositions.ts  useTrading.ts  useTriggerOrderMonitor.ts  useVault.ts
frontend/src/stores/: marketStore.test.ts  marketStore.ts  referralStore.ts  triggerOrderStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: pda.ts  transaction.ts
programs/mm-registry/: Cargo.toml
programs/mm-registry/src/: errors.rs  lib.rs
programs/mm-registry/src/instructions/: cancel_quote.rs  deposit_collateral.rs  deregister_mm.rs  fill_quote.rs  initialize_registry.rs  mod.rs  post_quote.rs  register_mm.rs  update_quote.rs  withdraw_collateral.rs
programs/mm-registry/src/state/: market_maker.rs  mod.rs  quote.rs  registry.rs
programs/orderbook/: Cargo.toml
programs/orderbook/src/: lib.rs
programs/perps-core/: Cargo.toml
programs/perps-core/src/: errors.rs  lib.rs
programs/perps-core/src/instructions/: add_margin.rs  apply_referral_code.rs  claim_referral_rewards.rs  close_position.rs  create_referral_code.rs  deposit_collateral.rs  initialize_market.rs  initialize_user.rs  liquidate.rs  mod.rs  open_position.rs  update_funding.rs  withdraw_collateral.rs
programs/perps-core/src/state/: market.rs  mod.rs  position.rs  referral.rs
programs/prop-amm/: Cargo.toml
programs/prop-amm/src/: errors.rs  lib.rs
programs/prop-amm/src/instructions/: close_position.rs  deposit.rs  initialize_vault.rs  mod.rs  open_position.rs  request_withdrawal.rs  withdraw.rs
programs/prop-amm/src/state/: lp_position.rs  mod.rs  vault.rs
programs/vamm/: Cargo.toml
programs/vamm/src/: lib.rs
scripts/: initialize-market.ts  package.json
sdk/mm-registry/: package-lock.json  package.json
sdk/mm-registry/src/: client.ts  index.ts  pda.ts  types.ts  utils.ts
tests/: oil-perps.ts
