[workspace]
resolver = "2"
members = [
    "programs/*"
]
# Backend is excluded due to dependency conflicts with Solana versions
# Build backend separately with: cargo build -p oil-perps-api
exclude = [
    "backend/api",
    "backend/indexer",
    "backend/keeper"
]

[workspace.dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16"
pyth-sdk-solana = "0.8"
