[package]
name = "oil-perps-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
solana-client = "1.14"
solana-sdk = "1.14"
anchor-client = "0.24.2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
futures = "0.3"
