[package]
name = "oil-perps-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
futures = "0.3"
lazy_static = "1.4"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
