[package]
name = "orderbook"
version = "0.1.0"
description = "On-chain order book for perpetual futures"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orderbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
perps-core = { path = "../perps-core", features = ["cpi"] }
