[package]
name = "perps-core"
version = "0.1.0"
description = "Core perpetual futures trading engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perps_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
pyth-sdk-solana = "0.8"
