[package]
name = "prop-amm"
version = "0.1.0"
description = "Proprietary AMM for perpetual futures trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prop_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
pyth-sdk-solana = "0.8"
